# silvestre

./: .gitignore  Cargo.toml  PLAN.md  README.md
.claude/: settings.json
.claude/commands/: implement-issue.md
crates/silvestre-core/: Cargo.toml
crates/silvestre-core/src/: error.rs  image.rs
crates/silvestre-core/src/effects/: mod.rs
crates/silvestre-core/src/filters/: mod.rs
crates/silvestre-ffi/: Cargo.toml  cbindgen.toml
docs/superpowers/plans/: 2026-04-28-filter-improvements.md
docs/superpowers/specs/: 2026-04-28-rotate-filter-design.md
silvestre-cli/: Cargo.toml
silvestre-cli/src/: app.rs  handlers.rs  main.rs  ui.rs
silvestre-cli/src/commands/: apply.rs  info.rs  list.rs  mod.rs
silvestre-core/: Cargo.toml
silvestre-core/benches/: filters.rs
silvestre-core/src/: error.rs  image.rs  io.rs  lib.rs
silvestre-core/src/analysis/: histogram.rs  mod.rs
silvestre-core/src/effects/: brightness.rs  contrast.rs  grayscale.rs  invert.rs  mod.rs  sepia.rs
silvestre-core/src/filters/: box_blur.rs  canny.rs  convolution.rs  gaussian.rs  median.rs  mod.rs  sharpen.rs  sobel.rs
silvestre-core/src/transform/: crop.rs  mirror.rs  mod.rs  resize.rs  rotate.rs
silvestre-core/tests/: integration_test.rs  property_tests.rs
silvestre-ffi/: Cargo.toml  build.rs  cbindgen.toml
silvestre-ffi/include/: silvestre.h
silvestre-ffi/src/: lib.rs
silvestre-ffi/tests/: smoke_test.c
silvestre-wasm/: Cargo.toml  README.md
silvestre-wasm/src/: lib.rs
silvestre-wasm/www/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
silvestre-wasm/www/src/: App.tsx  main.tsx
silvestre-wasm/www/src/components/: filter-panel.tsx  image-canvas.tsx  image-comparison.tsx  image-upload.tsx
silvestre-wasm/www/src/hooks/: use-filter.ts  use-wasm.ts
silvestre-wasm/www/src/lib/: filters.ts
silvestre_flutter/: .gitignore  README.md  pubspec.yaml
silvestre_flutter/android/: build.gradle
silvestre_flutter/example/: LICENSE  pubspec.yaml
silvestre_flutter/example/android/app/: build.gradle.kts
silvestre_flutter/example/android/app/src/main/: AndroidManifest.xml
silvestre_flutter/example/android/app/src/main/kotlin/com/enzoftware/silvestre/silvestre_flutter_example/: MainActivity.kt
silvestre_flutter/example/ios/Runner/: Info.plist
silvestre_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
silvestre_flutter/example/lib/: main.dart
silvestre_flutter/example/lib/src/: filters.dart
silvestre_flutter/example/lib/src/editor/: editor.dart
silvestre_flutter/example/lib/src/editor/bloc/: editor_bloc.dart  editor_event.dart  editor_state.dart
silvestre_flutter/example/lib/src/editor/view/: editor_page.dart  filter_panel.dart  image_comparison.dart
silvestre_flutter/example/lib/src/histogram/: histogram.dart
silvestre_flutter/example/lib/src/histogram/bloc/: histogram_bloc.dart  histogram_event.dart  histogram_state.dart
silvestre_flutter/example/lib/src/histogram/view/: histogram_view.dart
silvestre_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
silvestre_flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
silvestre_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
silvestre_flutter/example/test/editor/bloc/: editor_bloc_test.dart
silvestre_flutter/example/test/histogram/bloc/: histogram_bloc_test.dart
silvestre_flutter/example/web/: index.html  manifest.json
silvestre_flutter/example/windows/: CMakeLists.txt
silvestre_flutter/example/windows/runner/: Runner.rc  main.cpp
silvestre_flutter/ios/: silvestre_flutter.podspec
silvestre_flutter/lib/: silvestre_flutter.dart
silvestre_flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
silvestre_flutter/lib/src/rust/api/: analysis.dart  filters.dart  image.dart
silvestre_flutter/rust/: Cargo.toml
silvestre_flutter/rust/src/: frb_generated.rs
silvestre_flutter/rust/src/api/: analysis.rs  filters.rs  image.rs  mod.rs
