[workspace]
resolver = "2"
members = [
    "silvestre-core",
    "silvestre-ffi",
    "silvestre-cli",
    "silvestre-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/enzoftware/silvestre"

[workspace.dependencies]
silvestre-core = { path = "silvestre-core" }
image = "0.25"
thiserror = "2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
