[package]
name = "silvestre-cli"
description = "Command-line interface for silvestre image processing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
silvestre-core = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
