[package]
name = "silvestre-core"
description = "Cross-platform image processing library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "filters"
harness = false
