[package]
name = "silvestre-ffi"
description = "C ABI foreign function interface for silvestre"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
silvestre-core = { workspace = true }

[build-dependencies]
cbindgen = "0.29.2"
